--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,49 @@
 .App {
-  text-align: center;
+  display: grid;
+  width: 96%;
+  margin: 0 auto;
+  gap: 1.8rem;
+  grid-template-columns: 12rem auto 23rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Sidebar {
+  height: 100vh;
+  background-color: pink;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Sidebar .LogoWrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.4rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Sidebar .NavLists {
   display: flex;
   flex-direction: column;
+  background-color: #FFF;
+  box-shadow: 0 2rem 3rem rgba(132, 139, 200, 0.18);
+  border-radius: 15px;
+  height: 88vh;
+  position: relative;
+  top: 1.5rem;
+  transition: all 0.3s ease;
+}
+.Sidebar .Nav {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: #7d8da1;
+  height: 3.7rem;
+  gap: 1rem;
+  position: relative;
+  margin-left: 2rem;
+  transition: all 0.3s ease;
 }
-
-.App-link {
-  color: #61dafb;
+.Main {
+  margin-top: 1.4rem;
+  background-color: #fff;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.User {
+  height: 100vh;
+  background-color: blue;
+}
+a {
+  text-decoration: none;
 }
